// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`joi2Types object 1`] = `
"/**
 * This is description
 */
export interface JoiTypes {
  bar?: boolean;
  foo?: {
    /**
     * this is foo_1
     */
    foo_1?: boolean;
    foo_2?: boolean;
    foo_3?: \\"browser\\" | \\"hash\\" | \\"memory\\";
    [k: string]: any;
  };
  [k: string]: any;
}"
`;

exports[`joi2Types object required 1`] = `
"/**
 * This is description
 */
export interface JoiTypes {
  bar: boolean;
  foo: {
    /**
     * this is foo_1
     */
    foo_1: boolean;
    foo_2: boolean;
    foo_3: \\"browser\\" | \\"hash\\" | \\"memory\\";
    [k: string]: any;
  };
  [k: string]: any;
}"
`;
